<resources>
    <string name="app_name">Earthquake</string>

    <string name="label_recent_earthquakes">Recent earthquakes</string>

    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_earthquakes">No earthquakes found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
         if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Near the</string>

    <!-- Used to reload earthquake data [CHAR LIMIT=NONE] -->
    <string name="action_reload">Reload</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Settings</string>

    <string name="zoom_out_map_title">Zoom out map</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">5</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order by</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- Strings For Limit of Earthquakes on the Screen Preference [CHAR LIMIT=30] -->
    <string name="settings_limit_of_earthquakes_on_screen_label">Limit on the screen</string>
    <string name="settings_limit_of_earthquakes_key" translatable="false">limit_of_earthquakes</string>
    <string name="settings_limit_of_earthquakes_default" translatable="false">30</string>

    <string name="time_title">Time</string>
    <string name="mercalli_scale_title">Mercalli Scale</string>
    <string name="location_title">Location</string>
    <string name="alert_level_title">Alert Level</string>

</resources>
