<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:entries="@array/settings_min_magnitude_labels"
        android:entryValues="@array/settings_min_magnitude_values"
        android:key="@string/settings_min_magnitude_key"
        android:title="@string/settings_min_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_limit_of_earthquakes_default"
        android:inputType="numberSigned"
        android:digits="0123456789"
        android:key="@string/settings_limit_of_earthquakes_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_limit_of_earthquakes_on_screen_label" />

</PreferenceScreen>