<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/magnitude"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:background="@drawable/magnitude_rectangle"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/textColorEarthquakeLocation"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/extra_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/earthquake_detail_vertical_padding"
        android:paddingEnd="@dimen/earthquake_detail_horizontal_padding"
        android:paddingLeft="@dimen/earthquake_detail_horizontal_padding"
        android:paddingRight="@dimen/earthquake_detail_horizontal_padding"
        android:paddingStart="@dimen/earthquake_detail_horizontal_padding"
        android:paddingTop="@dimen/earthquake_detail_vertical_padding"
        android:background="@android:color/white"
        android:alpha="0.7">

        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <LinearLayout
            android:id="@+id/time1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:src="@drawable/ic_access_time_black_36dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/time_title"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#7D8286"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/horizontal_middle"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:src="@drawable/ic_show_chart_black_36dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/mercalli_scale_title"
                    android:textColor="@android:color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mercalliScale"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#7D8286"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time1">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:src="@drawable/ic_place_black_36dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/location_title"
                    android:textColor="@android:color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/latLon"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#7D8286"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/horizontal_middle"
            app:layout_constraintTop_toBottomOf="@id/time2">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:src="@drawable/ic_add_alert_black_36dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/alert_level_title"
                    android:textColor="@android:color/black"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/alertLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#7D8286"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>